<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.project.m117.ShopActivity">

    <Button
        android:id="@+id/map_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginEnd="5dp"
        android:text="@string/map"
        tools:ignore="RelativeOverlap" />

    <ImageButton
        android:id="@+id/attack_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:contentDescription="@string/increase_attack"
        app:srcCompat="@drawable/attack"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <ImageButton
        android:id="@+id/defense_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/attack_button"
        android:layout_alignStart="@+id/attack_button"
        android:layout_below="@+id/attack_button"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/increase_defense"
        app:srcCompat="@drawable/defense" />

    <ImageButton
        android:id="@+id/health_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/increase_health"
        app:srcCompat="@drawable/health"
        android:layout_below="@+id/defense_button"
        android:layout_alignLeft="@+id/defense_button"
        android:layout_alignStart="@+id/defense_button" />

    <ImageView
        android:id="@+id/resource_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="5dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignBottom="@+id/map_button"
        android:contentDescription="@string/resource"
        app:srcCompat="@android:drawable/star_big_off" />

    <ImageView
        android:id="@+id/attack_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:contentDescription="@string/attack"
        app:srcCompat="@drawable/attack_icon"/>

    <ImageView
        android:id="@+id/defense_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/attack_icon"
        android:contentDescription="@string/health"
        app:srcCompat="@drawable/defense_icon"/>

    <ImageView
        android:id="@+id/health_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/defense_icon"
        android:contentDescription="@string/defense"
        app:srcCompat="@drawable/health_icon" />

    <TextView
        android:id="@+id/resource_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/resource_icon"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:layout_toEndOf="@+id/resource_icon"
        android:layout_toRightOf="@+id/resource_icon"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/attack_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/attack_icon"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:layout_toEndOf="@+id/attack_icon"
        android:layout_toRightOf="@+id/attack_icon"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/defense_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/defense_icon"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:layout_toEndOf="@+id/defense_icon"
        android:layout_toRightOf="@+id/defense_icon"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/health_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/health_icon"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:layout_toEndOf="@+id/health_icon"
        android:layout_toRightOf="@+id/health_icon"
        android:keepScreenOn="false"
        android:textSize="25sp" />

</RelativeLayout>