<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.project.m117.MapsActivity">

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.project.m117.MapsActivity" />

    <Button
        android:id="@+id/shop_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:text="@string/shop" />

    <Button
        android:id="@+id/assault_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/shop_button"
        android:layout_toRightOf="@+id/shop_button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginEnd="5dp"
        android:text="@string/assault" />

    <Button
        android:id="@+id/center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/center"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_alignParentTop="true"
        android:layout_alignEnd="@+id/shop_button"
        android:layout_alignRight="@+id/shop_button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="24sp" />

    <Button
        android:id="@+id/zoom_out"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zoom_out"
        android:layout_toStartOf="@+id/zoom_in"
        android:layout_toLeftOf="@+id/zoom_in"
        android:layout_alignBaseline="@+id/center"
        android:layout_alignBottom="@+id/center"
        android:textSize="24sp" />

    <Button
        android:id="@+id/zoom_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/center"
        android:layout_alignBottom="@+id/center"
        android:layout_alignEnd="@+id/assault_button"
        android:layout_alignRight="@+id/assault_button"
        android:text="@string/zoom_in"
        android:textSize="24sp" />

    <ImageView
        android:id="@+id/resource_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="55dp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:contentDescription="@string/resource"
        android:cropToPadding="false"
        android:visibility="visible"
        android:src="@android:drawable/star_big_off" />

    <ImageView
        android:id="@+id/attack_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="55dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/attack"
        android:cropToPadding="false"
        android:src="@drawable/attack"
        android:layout_alignRight="@+id/resource_icon"
        android:layout_alignEnd="@+id/resource_icon" />

    <ImageView
        android:id="@+id/defense_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/resource_icon"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/resource_icon"
        android:layout_below="@+id/attack_icon"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/health"
        android:src="@drawable/defense" />

    <ImageView
        android:id="@+id/health_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/defense_icon"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/defense"
        android:src="@drawable/health"
        android:layout_toLeftOf="@+id/defense_count"
        android:layout_toStartOf="@+id/defense_count" />

    <TextView
        android:id="@+id/resource_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/resource_icon"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:layout_toEndOf="@+id/resource_icon"
        android:layout_toRightOf="@+id/resource_icon"
        android:textColor="#000000"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/attack_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/attack_icon"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:layout_toEndOf="@+id/attack_icon"
        android:layout_toRightOf="@+id/attack_icon"
        android:textColor="#000000"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/defense_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/defense_icon"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:layout_toEndOf="@+id/defense_icon"
        android:layout_toRightOf="@+id/defense_icon"
        android:textColor="#000000"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/health_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/health_icon"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:layout_toEndOf="@+id/health_icon"
        android:layout_toRightOf="@+id/health_icon"
        android:keepScreenOn="false"
        android:textColor="#000000"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/time_remaining"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:keepScreenOn="false"
        android:text="00:00"
        android:textColor="#000000"
        android:textSize="25sp"
        android:layout_alignTop="@+id/attack_icon"
        android:layout_alignRight="@+id/zoom_in"
        android:layout_alignEnd="@+id/zoom_in" />
</RelativeLayout>